# code-maroc-version-4

./: pyproject.toml
src/: main.py
src/.github/workflows/: build.yml
